--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Intelligent Communication Lab"
 title_separator          : "-"
 name                     : &name "Yulin Shao"
 description              : &description "Supervisor of the Intelligent Communication Lab"
-url                      : https://lynshao.github.io/Lab/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://lynshao.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
@@ -88,7 +88,7 @@ author:
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com.hk/citations?user=jd5FILAAAAAJ&hl"
   email            :
-  researchgate     :  example: "https://www.researchgate.net/profile/yourprofile"
+  researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
   codepen          :
