--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Intelligent Communication Lab"
 title_separator          : "-"
 name                     : &name "Yulin Shao"
 description              : &description "Supervisor of the Intelligent Communication Lab"
-url                      : https://Lab # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://Lab.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "lynshao/Lab"
+repository               : "lynshao/Lab.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
