--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Intelligent Communication Lab"
 title_separator          : "-"
 name                     : &name "Yulin Shao"
 description              : &description "Supervisor of the Intelligent Communication Lab"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://lynshao.github.io/Lab.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
