--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,32 @@
 # main links links
 main:
-  - title: "Publications"
-    url: /publications/
+  - title: "Supervisor"
+    url: /supervisor/
+    
+  - title: "Research"
+    url: /research/
+    
+  - title: "Blog"
+    url: /blog/
+        
+  #- title: "Blog Posts"
+  # url: /year-archive/
+  
+  - title: "Teaching"
+    url: /teaching/  
 
   - title: "Talks"
     url: /talks/    
 
-  - title: "Teaching"
-    url: /teaching/    
+  - title: "Publications"
+    url: /publications/  
+  
     
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
+ # - title: "Portfolio"
+ #   url: /portfolio/
     
-  - title: "CV"
-    url: /cv/
+ # - title: "CV"
+#    url: /cv/
     
-  - title: "Guide"
-    url: /markdown/
+#  - title: "Guide"
+ #   url: /markdown/
