--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
 main:
   - title: "Supervisor"
-    url: /supervisor/
+    url: /cv/
     
   - title: "Research"
     url: /research/
