--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,6 +21,8 @@ main:
   - title: "Publications"
     url: /publications/  
   
+  - title: "Join us"
+    # url: /publications/  
     
  # - title: "Portfolio"
  #   url: /portfolio/
