--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -22,6 +22,7 @@ main:
     url: /publications/  
   
   - title: "Join us"
+    url: /ad/
     # url: /publications/  
     
  # - title: "Portfolio"
