--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,13 +1,14 @@
 # main links links
 main:
-  - title: "People"
-    url: /ppl/
     
   - title: "Research"
     url: /research/
     
-  - title: "Blog"
-    url: /blog/
+  - title: "People"
+    url: /ppl/
+    
+  # - title: "Blog"
+  #   url: /blog/
         
   #- title: "Blog Posts"
   # url: /year-archive/
@@ -15,8 +16,8 @@ main:
   - title: "Teaching"
     url: /teaching/  
 
-  - title: "Talks"
-    url: /talks/    
+  # - title: "Talks"
+  #   url: /talks/    
 
   - title: "Publications"
     url: /publications/  
