--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Intelligent Communication Lab"
   avatar           : "icon.jpg"
-  bio              : "State Key Laboratory in the Internet of Things for smart city, University of Macau"
+  bio              : "State Key Laboratory of Internet of Things for Smart City"
   location         : "Macau"
   employer         :
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
