--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Intelligent Communication Lab"
   avatar           : "icon.jpg"
-  bio              : "State Key Laboratory of Internet of Things for Smart City. \\ Supervisor: Yulin Shao"
+  bio              : "State Key Laboratory of Internet of Things for Smart City. \ Supervisor: Yulin Shao"
   location         : "Macau"
   employer         :
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
