--- a/_config.yml
+++ b/_config.yml
@@ -111,7 +111,7 @@ author:
   tumblr           :
   twitter          : # "replacethistwitterhandle"
   vine             :
-  weibo            :
+  weibo            : "https://www.zhihu.com/people/y.shao"
   xing             :
   youtube          :
   wikipedia        :
