--- a/_config.yml
+++ b/_config.yml
@@ -115,7 +115,7 @@ author:
   xing             :
   youtube          :
   wikipedia        :
-  Zhihu            : "https://www.zhihu.com/people/y.shao"
+  zhihu            : "https://www.zhihu.com/people/y.shao"
 
 
 # Reading Files
