--- a/_config.yml
+++ b/_config.yml
@@ -90,31 +90,31 @@ author:
   email            :
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              : "https://www.zhihu.com/people/y.shao"
-  bitbucket        : "https://www.zhihu.com/people/y.shao"
-  codepen          : "https://www.zhihu.com/people/y.shao"
-  dribbble         : "https://www.zhihu.com/people/y.shao"
-  flickr           : "https://www.zhihu.com/people/y.shao"
-  facebook         : # "https://www.zhihu.com/people/y.shao"
-  foursquare       : "https://www.zhihu.com/people/y.shao"
+  bitbucket        :
+  codepen          :
+  dribbble         : 
+  flickr           : 
+  facebook         : 
+  foursquare       : 
   github           : # "academicpages"
-  google_plus      : "https://www.zhihu.com/people/y.shao"
-  keybase          : "https://www.zhihu.com/people/y.shao"
-  instagram        : "https://www.zhihu.com/people/y.shao"
-  impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
-  lastfm           : "https://www.zhihu.com/people/y.shao"
-  linkedin         : "https://www.zhihu.com/people/y.shao"
-  orcid            : # "http://orcid.org/yourorcidurl"
-  pinterest        : "https://www.zhihu.com/people/y.shao"
-  soundcloud       : "https://www.zhihu.com/people/y.shao"
-  stackoverflow    : # http://stackoverflow.com/users/123456/username
-  steam            : "https://www.zhihu.com/people/y.shao"
-  tumblr           : "https://www.zhihu.com/people/y.shao"
-  twitter          : # "replacethistwitterhandle"
-  vine             : "https://www.zhihu.com/people/y.shao"
-  weibo            :  "https://www.zhihu.com/people/y.shao"
-  xing             : "https://www.zhihu.com/people/y.shao"
-  youtube          : "https://www.zhihu.com/people/y.shao"
-  wikipedia        : "https://www.zhihu.com/people/y.shao"
+  google_plus      :
+  keybase          : 
+  instagram        :
+  impactstory      :
+  lastfm           : 
+  linkedin         :
+  orcid            :
+  pinterest        : 
+  soundcloud       : 
+  stackoverflow    :
+  steam            : 
+  tumblr           : 
+  twitter          : 
+  vine             : 
+  weibo            : 
+  xing             : 
+  youtube          : 
+  wikipedia        : 
 
 
 # Reading Files
