--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Intelligent Communication Lab"
-  avatar           : "icon.jpg"
+  avatar           : "icon.png"
   bio              : "State Key Laboratory of Internet of Things for Smart City. \ Supervisor: Yulin Shao"
   location         : "Macau"
   employer         : 
