--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Intelligent Communication Lab"
 title_separator          : "-"
 name                     : &name "Intelligent Communication Lab"
-description              : &description "State Key Laboratory in the Internet of Things for smart city, University of Macau"
+description              : &description "University of Hong Kong"
 url                      : https://lynshao.github.io/Lab.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "lynshao/Lab.github.io"
@@ -82,8 +82,8 @@ analytics:
 author:
   name             : "Intelligent Communication Lab"
   avatar           : "icon.png"
-  bio              : "State Key Laboratory of Internet of Things for Smart City. \ Supervisor: Yulin Shao"
-  location         : "Macau"
+  bio              : "University of Hong Kong. \ Supervisor: Yulin Shao"
+  location         : "Hong Kong"
   employer         : 
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com.hk/citations?user=jd5FILAAAAAJ&hl"
