--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Intelligent Communication Lab"
 title_separator          : "-"
 name                     : &name "Intelligent Communication Lab"
-description              : &description "University of Hong Kong"
+description              : &description "The University of Hong Kong"
 url                      : https://lynshao.github.io/Lab.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "lynshao/Lab.github.io"
