--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Intelligent Communication Lab"
   avatar           : "icon.png"
-  bio              : "University of Hong Kong \ Supervisor: Yulin Shao"
+  bio              : "The University of Hong Kong \ Supervisor: Yulin Shao"
   location         : "Hong Kong"
   employer         : 
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
